sass stuff and images

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,6 +1,13 @@
 @import "styles";
+@font-face {
+  font-family: 'BebasNeueRegular';
+  src: url("/fonts/BebasNeue-webfont.eot");
+  src: url("/fonts/BebasNeue-webfont.eot?#iefix") format("eot"), url("/fonts/BebasNeue-webfont.woff") format("woff"), url("/fonts/BebasNeue-webfont.ttf") format("truetype"), url("/fonts/BebasNeue-webfont.svg#webfontfvFLBU0N") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 
 body {
+
 
 	
 }
