--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,14 +6,13 @@
 <div id="how-it-works">
 	<h1>How it Works</h1>
 	<div id = "container">
-		<div class="blurb">
-			STEP 1
+		<div id="blurb1">
 		</div>
-		<div class="blurb">
-			STEP 2
+		<div id="blurb2">
+		
 		</div>
-		<div class="blurb">
-			STEP 3
+		<div id="blurb3">
+		
+		</div>
 	</div>
-</div>
 </div>
