--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,11 +1,12 @@
 @import "styles";
+@import "blurbs";
 
-	#login {
-	width: 400px;
-	height: 200px;
-	background: $gray-color;
-	margin: 100px auto;
-	}
+#login {
+width: 400px;
+height: 200px;
+background: $gray-color;
+margin: 100px auto;
+}
 
 #how-it-works {
 	height: 500px;
@@ -13,22 +14,33 @@
 
 	h1 {
 	text-align: center;
+	font-size: 30px;
 	}
 
 	#container{
 	width: 960px;
-	height: 400px;
+	height: 180px;
 	margin: auto;
-	background: red;
 
-		.blurb {
-		float: left;
-		border: 1px solid black;
-		width: 297px;
-		height: 300px;
-		margin: 10px;
+		#blurb1 {
+			@include blurb(url('instructions-01.png') no-repeat);
 		}
-	}
 
-	
+		#blurb2 {
+			@include blurb(url('instructions-02.png') no-repeat);
+		}
+
+		#blurb3 {
+			@include blurb(url('instructions-03.png') no-repeat);
+		}
+
+		p {
+			font-size: 30px;
+			}
+
+		span {
+			font-size: 130px;
+			
+			}
+	}	
 }
