--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -7,6 +7,13 @@
 	margin: 100px auto;
 	}
 
+	#user_edit {
+	width: 400px;
+	height: 400px;
+	background: $gray-color;
+	margin: 100px auto;
+	}
+
 #how-it-works {
 	height: 500px;
 	background: $gray-color;
@@ -30,5 +37,5 @@
 		}
 	}
 
-	
+
 }
